Fix navbar logo alignment (#55)

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -9,7 +9,9 @@
 
 body {
   .navbar {
-    @import "partials/navbar";
+    .container {
+      @import "partials/navbar";
+    }
   }
 
   &.not-logged-in {
